--- a/index.html
+++ b/index.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Snake Game</title>
+        <title>McCooll75's game library</title>
+        <link rel="icon" href="icon.ico">
         <style>
             body{
                 margin: 0px;
                 padding: 0px;
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
                 align-items: center;
             }
-            canvas {
-                box-shadow: black 20px 10px 50px;
-            }
             h1 {
-                margin: 0px;
+                margin: 10px;
                 padding: 0px;
+            }
+            .thumbinails {
+                width: 97%;
+            }
+            div {
+                display:inline-block;
+                padding-left: 10px;
+                margin-right: 20px;
             }
         </style>
     </head>
     <body>
-        <h1>Snake Game</h1>
-        <h2 id="score">Score: 0</h2>
-        <canvas id="game" width="800" height="800"></canvas>
-        <script src="script.js"></script>
+        <h1>McCooll75's game library</h1>
+        <h2>Games I have made using javascript:</h2>
+        <div class="thumbinails">
+            <div>
+                <a href="SnakeGame/index.html">
+                    <img src="Snake.png" width="300">
+                    <h2>Snake game</h2>
+                </a>
+            </div>
+            <div>
+                <a href="Minesweeper/index.html">
+                    <img src="Minesweeper.png" width="300">
+                    <h2>Minesweeper</h2>
+                </a>
+            </div>
+        </div>
     </body>
 </html>
