--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>McCooll75's game library</title>
+        <title>game library of mine</title>
         <link rel="icon" href="icon.ico">
         <style>
             body{
